test/while/proc_in_body.cipl.out
::stdout::

::stderr::
Error on line 1 at `proc`: Unexpected token.
