test/while/proc_in_body.cipl
while true: proc foo(): pass